Implement img-resize for example function
